# pixels

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: database.py  main.py  models.py  rate_limiter.py  redis_cache.py
docs/: prd.md
tests/: conftest.py  test_main.py  test_simple.py
